Switched styles due to compatibility issues on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -10,39 +10,9 @@ body {
 }
 button {
   font-family: inherit;
-  font-size: 0.5em;
 }
 li {
   list-style-type: none;
-}
-/*divisions form one, complete task inline*/
-
-.todo-priority {
-  display: inline;
-  padding-right: 1em;
-}
-.todo-text {
-  display: inline;
-  padding-right: 1em;
-}
-.todo-created-at {
-  display: inline;
-  padding-right: 1em;
-}
-#counter-section {
-  font-size: 5vh;
-  position: relative;
-  bottom: 6vh;
-  right: 6vw;
-}
-#sort-button {
-  position: relative;
-  bottom: 13.7vh;
-  left: 23vh;
-}
-#delete-button {
-  background-color: inherit;
-  height: 2.7vh;
 }
 #title {
   font-size: 8.4vh;
@@ -53,14 +23,76 @@ li {
 #control {
   text-align: center;
 }
+#counter-section {
+  position: relative;
+  font-size: 5vh;
+  bottom: 6vh;
+  right: 4vw;
+}
+#sort-button {
+  position: relative;
+  background-color: inherit;
+  border: none;
+  font-weight: 800;
+  bottom: 14vh;
+  left: 23vh;
+  font-size: 3vh;
+}
+#add-button {
+  background-color: inherit;
+  border: none;
+  font-weight: 800;
+  font-size: 3vh;
+}
+
 #view {
-  font-family: "Nunito", sans-serif;
-  font-size: 0.6em;
   text-align: center;
+  font-family: "Nunito", sans-serif;
+  position: relative;
+  bottom: 14.8vh;
+  font-size: 3.3vh;
   font-weight: 500;
+}
+#delete-button {
+  background-color: inherit;
+  height: 2.7vh;
 }
 #text-input {
   background-color: inherit;
-  border: #facd89;
+  border: 5%, solid, black;
   font-family: inherit;
+  height: 5%;
+  /* overflow-wrap: break-word; HOW DO YOU WRAP THE TEXT INPUT */
+}
+#add-section {
+  position: relative;
+  bottom: 14vh;
+}
+#delete-button {
+  position: relative;
+  bottom: 2vh;
+}
+
+.todo-priority {
+  position: relative;
+  display: inline-block;
+  padding-right: 1em;
+  bottom: 3vh;
+}
+.todo-text::before {
+  content: "||   ";
+}
+.todo-text {
+  position: relative;
+  display: inline-block;
+  bottom: 2.5vh;
+  padding-right: 1.5em;
+}
+.todo-created-at {
+  display: inline-block;
+  position: relative;
+  padding-right: 2em;
+  font-size: 2.4vh;
+  bottom: 1vh;
+  line-height: 3.6vh;
 }
